force-app/main/default/objects/Quote_Request__c/fields/Additional_Files_or_Images__c.field-meta.xml
<CustomField>
    <fullName>Additional_Files_or_Images__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Files or Images?</label>
    <type>Checkbox</type>
</CustomField>