force-app/main/default/objects/Quote_Request__c/fields/Additional_Product_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Product_Requirements__c</fullName>
    <inlineHelpText
  >Please list out any additional product specifications to be quoted:
(ex. Specific Materials, Non-Standard Imprinting, USA Made, etc.)</inlineHelpText>
    <label>Additional Product Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>