force-app/main/default/objects/Quote_Request__c/fields/Additional_Products__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products__c</fullName>
    <formula>Opportunity__r.Products__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional Products</label>
    <type>Text</type>
</CustomField>