force-app/main/default/objects/Quote_Request__c/fields/Additional_Products_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_Old_Value__c</fullName>
    <label>Additional Products (Old Value)</label>
    <type>TextArea</type>
</CustomField>