force-app/main/default/objects/Quote_Request__c/fields/Additional_Quantities_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Quantities_3__c</fullName>
    <description>If any Additional Quantities are mentioned</description>
    <inlineHelpText
  >If any Additional Quantities are mentioned - Please specify here</inlineHelpText>
    <label>Additional Quantities (3)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>