force-app/main/default/objects/Quote_Request__c/fields/Any_additional_details__c.field-meta.xml
<CustomField>
    <fullName>Any_additional_details__c</fullName>
    <label>Any additional details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>