force-app/main/default/objects/Quote_Request__c/fields/Artwork__c.field-meta.xml
<CustomField>
    <fullName>Artwork__c</fullName>
    <description>QR - Quoting for Artwork description</description>
    <label>Artwork</label>
    <type>TextArea</type>
</CustomField>