force-app/main/default/objects/Quote_Request__c/fields/Assembly_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Assembly_Requirements__c</fullName>
    <label>Assembly Requirements</label>
    <length>50</length>
    <type>Text</type>
</CustomField>