force-app/main/default/objects/Quote_Request__c/fields/Bid_Situation_Price__c.field-meta.xml
<CustomField>
    <fullName>Bid_Situation_Price__c</fullName>
    <label>Bid Situation (Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>