force-app/main/default/objects/Quote_Request__c/fields/Binding__c.field-meta.xml
<CustomField>
    <fullName>Binding__c</fullName>
    <description>QR - Quoting Binding</description>
    <label>Binding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>