force-app/main/default/objects/Quote_Request__c/fields/Bound_Edge__c.field-meta.xml
<CustomField>
    <fullName>Bound_Edge__c</fullName>
    <label>Bound Edge</label>
    <length>50</length>
    <type>Text</type>
</CustomField>