force-app/main/default/objects/Quote_Request__c/fields/Budget_Constraints_Price__c.field-meta.xml
<CustomField>
    <fullName>Budget_Constraints_Price__c</fullName>
    <label>Budget Constraints (Price)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>