force-app/main/default/objects/Quote_Request__c/fields/Calendar_Minimum_Request__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Minimum_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Must order a minimum of 500 pieces for a Custom Calendar Request. Does your request meet this minimum?</inlineHelpText>
    <label>Calendar Minimum Request</label>
    <type>Checkbox</type>
</CustomField>