force-app/main/default/objects/Quote_Request__c/fields/Calendar_Size__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Size__c</fullName>
    <label>Calendar Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>