force-app/main/default/objects/Quote_Request__c/fields/Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won__c</fullName>
    <formula>IF(Opportunity_Stage__c = &quot;Closed Won&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>