force-app/main/default/objects/Quote_Request__c/fields/Competitor_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Price__c</fullName>
    <inlineHelpText>For Price Match</inlineHelpText>
    <label>Competitor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>