force-app/main/default/objects/Quote_Request__c/fields/Convert_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Opportunity</label>
    <type>Checkbox</type>
</CustomField>