force-app/main/default/objects/Quote_Request__c/fields/Create_Oppportunity__c.field-meta.xml
<CustomField>
    <fullName>Create_Oppportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Oppportunity</label>
    <type>Checkbox</type>
</CustomField>