force-app/main/default/objects/Quote_Request__c/fields/Currency_Account__c.field-meta.xml
<CustomField>
    <fullName>Currency_Account__c</fullName>
    <formula>Account__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency (By Account)</label>
    <type>Text</type>
</CustomField>