force-app/main/default/objects/Quote_Request__c/fields/Custom_or_Stock_Grid__c.field-meta.xml
<CustomField>
    <fullName>Custom_or_Stock_Grid__c</fullName>
    <label>Custom or Stock Grid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>