force-app/main/default/objects/Quote_Request__c/fields/Decoration_Location__c.field-meta.xml
<CustomField>
    <fullName>Decoration_Location__c</fullName>
    <label>Decoration Location</label>
    <type>TextArea</type>
</CustomField>