force-app/main/default/objects/Quote_Request__c/fields/Decoration_Method__c.field-meta.xml
<CustomField>
    <fullName>Decoration_Method__c</fullName>
    <label>Decoration Method</label>
    <length>25</length>
    <type>Text</type>
</CustomField>