force-app/main/default/objects/Quote_Request__c/fields/Description_QR__c.field-meta.xml
<CustomField>
    <fullName>Description_QR__c</fullName>
    <description>QR needed - Quote Req. description</description>
    <label>Description (QR)</label>
    <type>TextArea</type>
</CustomField>