force-app/main/default/objects/Quote_Request__c/fields/Domestic_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >For Domestic requests, inventory must be checked on the website prior to quote submission. If inventory is insufficient, please specify how you would like to proceed in the Mandatory Requirements being that our quotes are only valid for 30 days.</inlineHelpText>
    <label>Domestic Inventory</label>
    <type>Checkbox</type>
</CustomField>