force-app/main/default/objects/Quote_Request__c/fields/EBS__c.field-meta.xml
<CustomField>
    <fullName>EBS__c</fullName>
    <formula>Account__r.EBS_Num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBS #</label>
    <type>Text</type>
</CustomField>