force-app/main/default/objects/Quote_Request__c/fields/End_User__c.field-meta.xml
<CustomField>
    <fullName>End_User__c</fullName>
    <label>End User</label>
    <length>50</length>
    <type>Text</type>
</CustomField>