force-app/main/default/objects/Quote_Request__c/fields/EQP_Pricing__c.field-meta.xml
<CustomField>
    <fullName>EQP_Pricing__c</fullName>
    <label>EQP Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>