force-app/main/default/objects/Quote_Request__c/fields/Factory_Direct_Item__c.field-meta.xml
<CustomField>
    <fullName>Factory_Direct_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factory Direct Item</label>
    <type>Checkbox</type>
</CustomField>