force-app/main/default/objects/Quote_Request__c/fields/Grid__c.field-meta.xml
<CustomField>
    <fullName>Grid__c</fullName>
    <description>QR PDF field</description>
    <label>Grid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>