force-app/main/default/objects/Quote_Request__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Quote product image</description>
    <label>Image</label>
    <type>Url</type>
</CustomField>