force-app/main/default/objects/Quote_Request__c/fields/Imprint_Location__c.field-meta.xml
<CustomField>
    <fullName>Imprint_Location__c</fullName>
    <label>Imprint Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>