force-app/main/default/objects/Quote_Request__c/fields/Imprint_Method__c.field-meta.xml
<CustomField>
    <fullName>Imprint_Method__c</fullName>
    <label>Imprint Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>