force-app/main/default/objects/Quote_Request__c/fields/In_Hands_Date_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>In_Hands_Date_Event_Date__c</fullName>
    <label>In-Hands Date / Event Date</label>
    <type>Date</type>
</CustomField>