force-app/main/default/objects/Quote_Request__c/fields/Inside_Sales_2__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_2__c</fullName>
    <description>Potential 2nd sales rep</description>
    <formula>Account__r.Inside_Sales_2__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inside Sales 2</label>
    <type>Text</type>
</CustomField>