force-app/main/default/objects/Quote_Request__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>