force-app/main/default/objects/Quote_Request__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula
  >Hyperlink(Opportunity__r.Item_Name__c, Opportunity__r.Item_Name__r.Product_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item #</label>
    <type>Text</type>
</CustomField>