force-app/main/default/objects/Quote_Request__c/fields/Item_Color__c.field-meta.xml
<CustomField>
    <fullName>Item_Color__c</fullName>
    <label>Item Color</label>
    <length>25</length>
    <type>Text</type>
</CustomField>