force-app/main/default/objects/Quote_Request__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <formula
  >Hyperlink(Opportunity__r.Item_Name__c, Opportunity__r.Item_Name__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Name</label>
    <type>Text</type>
</CustomField>