force-app/main/default/objects/Quote_Request__c/fields/Item_Name_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Item_Name_Old_Value__c</fullName>
    <label>Item Name (Old Value)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>