force-app/main/default/objects/Quote_Request__c/fields/ITEM_STYLE__c.field-meta.xml
<CustomField>
    <fullName>ITEM_STYLE__c</fullName>
    <label>ITEM/STYLE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>