force-app/main/default/objects/Quote_Request__c/fields/Item_Test__c.field-meta.xml
<CustomField>
    <fullName>Item_Test__c</fullName>
    <formula>Opportunity__r.Item_Name__r.Product_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item Test</label>
    <type>Text</type>
</CustomField>