force-app/main/default/objects/Quote_Request__c/fields/KG_SFDC_Dev_Email__c.field-meta.xml
<CustomField>
    <fullName>KG_SFDC_Dev_Email__c</fullName>
    <label>KG SFDC Dev Email</label>
    <type>Email</type>
</CustomField>