force-app/main/default/objects/Quote_Request__c/fields/LOP_Pricing__c.field-meta.xml
<CustomField>
    <fullName>LOP_Pricing__c</fullName>
    <label>LOP Pricing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>