force-app/main/default/objects/Quote_Request__c/fields/Mandatory_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Requirements__c</fullName>
    <inlineHelpText
  >(ex. Legal, CPSIA, Going Green, Special Packaging, Partial/Drop Shipments, etc.)</inlineHelpText>
    <label>Mandatory Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>