force-app/main/default/objects/Quote_Request__c/fields/Misc_Comments__c.field-meta.xml
<CustomField>
    <fullName>Misc_Comments__c</fullName>
    <description>QR needed - Misc. Comments</description>
    <label>Misc Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>