force-app/main/default/objects/Quote_Request__c/fields/My_Team_QUOTE_REQUEST__c.field-meta.xml
<CustomField>
    <fullName>My_Team_QUOTE_REQUEST__c</fullName>
    <description>Quote Requests owned by Team Member</description>
    <formula>IF(
 OwnerId  = $User.Id || 
 Owner:User.ManagerId = $User.Id ||
 $User.ProfileId = &quot;00e1U000001GLZM&quot; ,
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team QUOTE REQUEST</label>
    <type>Checkbox</type>
</CustomField>