force-app/main/default/objects/Quote_Request__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>