force-app/main/default/objects/Quote_Request__c/fields/Options_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Options_Pricing__c</fullName>
    <description>QR - Quoting Options Pricing</description>
    <label>Options Pricing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>