force-app/main/default/objects/Quote_Request__c/fields/Overseas_Transit_Time_days__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Transit_Time_days__c</fullName>
    <description>QR - Quote PDF (number)</description>
    <label>Overseas Transit Time (days)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>