force-app/main/default/objects/Quote_Request__c/fields/Packing_Info__c.field-meta.xml
<CustomField>
    <fullName>Packing_Info__c</fullName>
    <description>Quoting - Packing Info</description>
    <label>Packing Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>