force-app/main/default/objects/Quote_Request__c/fields/Paper__c.field-meta.xml
<CustomField>
    <fullName>Paper__c</fullName>
    <description>QR - Quoting Paper text field</description>
    <label>Paper</label>
    <type>TextArea</type>
</CustomField>