force-app/main/default/objects/Quote_Request__c/fields/Paper_Type__c.field-meta.xml
<CustomField>
    <fullName>Paper_Type__c</fullName>
    <label>Paper Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>