force-app/main/default/objects/Quote_Request__c/fields/Parent_Quote_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Quote Request</label>
    <referenceTo>Quote_Request__c</referenceTo>
    <relationshipLabel>Cloned Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>