force-app/main/default/objects/Quote_Request__c/fields/Pending_Asia__c.field-meta.xml
<CustomField>
    <fullName>Pending_Asia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QR</description>
    <label>Pending Asia</label>
    <type>Checkbox</type>
</CustomField>