force-app/main/default/objects/Quote_Request__c/fields/Pending_CS_Sales__c.field-meta.xml
<CustomField>
    <fullName>Pending_CS_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QR</description>
    <label>Pending CS/Sales</label>
    <type>Checkbox</type>
</CustomField>