force-app/main/default/objects/Quote_Request__c/fields/Pending_Internal_Other__c.field-meta.xml
<CustomField>
    <fullName>Pending_Internal_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QR</description>
    <label>Pending Internal/Other</label>
    <type>Checkbox</type>
</CustomField>