force-app/main/default/objects/Quote_Request__c/fields/Pending_Manager_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Manager_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Manager Approval</label>
    <type>Checkbox</type>
</CustomField>