force-app/main/default/objects/Quote_Request__c/fields/Pending_Production__c.field-meta.xml
<CustomField>
    <fullName>Pending_Production__c</fullName>
    <label>Pending Production</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLWB1</fullName>
            </value>
            <value>
                <fullName>CLWB2</fullName>
            </value>
            <value>
                <fullName>SLE</fullName>
            </value>
            <value>
                <fullName>RDW</fullName>
            </value>
            <value>
                <fullName>Doniphan</fullName>
            </value>
            <value>
                <fullName>Spring Hill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>