force-app/main/default/objects/Quote_Request__c/fields/Pending_Purchasing__c.field-meta.xml
<CustomField>
    <fullName>Pending_Purchasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Purchasing</label>
    <type>Checkbox</type>
</CustomField>