force-app/main/default/objects/Quote_Request__c/fields/Pending_Quote_Team__c.field-meta.xml
<CustomField>
    <fullName>Pending_Quote_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Quote Team</label>
    <type>Checkbox</type>
</CustomField>