force-app/main/default/objects/Quote_Request__c/fields/Pending_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Pending_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Vendor</label>
    <type>Checkbox</type>
</CustomField>