force-app/main/default/objects/Quote_Request__c/fields/Previous_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Quote_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Quote Number</label>
    <referenceTo>Quote_Request__c</referenceTo>
    <relationshipLabel>Child Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>