force-app/main/default/objects/Quote_Request__c/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <label>Price Point</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>