force-app/main/default/objects/Quote_Request__c/fields/Pricing_Country__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Country__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>