force-app/main/default/objects/Quote_Request__c/fields/Printing__c.field-meta.xml
<CustomField>
    <fullName>Printing__c</fullName>
    <label>Printing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>