force-app/main/default/objects/Quote_Request__c/fields/Product1__c.field-meta.xml
<CustomField>
    <fullName>Product1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product1</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Requests</relationshipLabel>
    <relationshipName>Quote_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>