force-app/main/default/objects/Quote_Request__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Requests (Product2)</relationshipLabel>
    <relationshipName>Quote_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>