force-app/main/default/objects/Quote_Request__c/fields/Product3__c.field-meta.xml
<CustomField>
    <fullName>Product3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product3</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Requests (Product3)</relationshipLabel>
    <relationshipName>Quote_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>