force-app/main/default/objects/Quote_Request__c/fields/Product_1__c.field-meta.xml
<CustomField>
    <fullName>Product_1__c</fullName>
    <label>Product #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>