force-app/main/default/objects/Quote_Request__c/fields/Product_1_Margin__c.field-meta.xml
<CustomField>
    <fullName>Product_1_Margin__c</fullName>
    <label>Product #1 Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>