force-app/main/default/objects/Quote_Request__c/fields/Product_2__c.field-meta.xml
<CustomField>
    <fullName>Product_2__c</fullName>
    <label>Product #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>