force-app/main/default/objects/Quote_Request__c/fields/Product_3__c.field-meta.xml
<CustomField>
    <fullName>Product_3__c</fullName>
    <label>Product #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>