force-app/main/default/objects/Quote_Request__c/fields/Product_Colors__c.field-meta.xml
<CustomField>
    <fullName>Product_Colors__c</fullName>
    <inlineHelpText>Please List PMS or CMYK</inlineHelpText>
    <label>Product Colors</label>
    <length>50</length>
    <type>Text</type>
</CustomField>