force-app/main/default/objects/Quote_Request__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <inlineHelpText
  >Stockline is any Catalog Product with no changes or alterations.
Modified Stockline is any Catalog Product that is altered.
Special Packaging is any non-standard packing request.
Custom is any item not within our Catalog assortment.
If multiple options apply, please select custom.</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stockline</fullName>
            </value>
            <value>
                <fullName>Modified Stockline</fullName>
            </value>
            <value>
                <fullName>Special Packaging</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Stockline Special Pack</fullName>
                <isActive>false</isActive>
                <label>Stockline Special Pack</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>