force-app/main/default/objects/Quote_Request__c/fields/Production_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Lead_Time__c</fullName>
    <description>QR needed - Production Lead Time</description>
    <label>Production Lead Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>