force-app/main/default/objects/Quote_Request__c/fields/Production_Site__c.field-meta.xml
<CustomField>
    <fullName>Production_Site__c</fullName>
    <inlineHelpText>If not indicated, Domestic is the default.</inlineHelpText>
    <label>Production Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
                <default>true</default>
                <label>Domestic</label>
            </value>
            <value>
                <fullName>Overseas</fullName>
            </value>
            <value>
                <fullName>Domestic &amp; Overseas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>