force-app/main/default/objects/Quote_Request__c/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manually filled in by users</description>
    <inlineHelpText>Please select the correct Program Manager</inlineHelpText>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>