force-app/main/default/objects/Quote_Request__c/fields/Proof__c.field-meta.xml
<CustomField>
    <fullName>Proof__c</fullName>
    <description>QR - Quoting Proof field</description>
    <label>Proof</label>
    <length>100</length>
    <type>Text</type>
</CustomField>