force-app/main/default/objects/Quote_Request__c/fields/Qty_Run__c.field-meta.xml
<CustomField>
    <fullName>Qty_Run__c</fullName>
    <label>Qty/Run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>