force-app/main/default/objects/Quote_Request__c/fields/Quantity_Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Old_Value__c</fullName>
    <label>Quantity (Old Value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>